# FinancePortfolioSimulations

./: README.md  main.py  pyproject.toml
backend/src/: monte-carlo.py
backend/src/domain/portfolios/: MonteCarloSimulations.py  MonteCarloSimulator.py  Portfolio.py  Simulation.py
backend/src/infra/api/fastapi/routers/: AssetsRouter.py  PortfolioRouter.py
backend/src/infra/clients/: YahooFinanceClient.py
backend/src/services/: PortfolioService.py
bruno/: Get root.bru  bruno.json
bruno/Assets/: Search tickers.bru
bruno/Porfolios/: Get monte carlo sims var convergence.bru  Get monte carlo sims.bru
bruno/environments/: local.bru
frontend/: README.md  components.d.ts  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/router/: index.ts
frontend/src/views/: MonteCarloSimulationsView.vue
src/: monte-carlo.py
src/infra/api/fastapi/routers/: PortfolioRouter.py
src/services/: PortfolioService.py
