[tool.poetry]
name = "financeportfoliosimulations"
version = "0.1.0"
description = ""
authors = ["phtre57 <phtre57@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
panda = "^0.3.1"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.36"
fastapi = {extras = ["all"], version = "^0.109.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
